--- a/src/languages/buddyboss.pot
+++ b/src/languages/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.5.1.1\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2020-09-23 12:57:12+00:00\n"
+"POT-Creation-Date: 2020-09-30 10:13:58+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4541,7 +4541,7 @@ msgstr ""
 #: bp-core/bp-core-avatars.php:352
 #: bp-members/classes/class-bp-rest-members-details-endpoint.php:757
 #: bp-templates/bp-nouveau/buddypress/members/single/profile/change-avatar.php:15
-#: bp-xprofile/bp-xprofile-functions.php:2098
+#: bp-xprofile/bp-xprofile-functions.php:2103
 #: bp-xprofile/classes/class-bp-xprofile-component.php:286
 #: bp-xprofile/classes/class-bp-xprofile-component.php:401
 #: bp-xprofile/classes/class-bp-xprofile-profile-completion-widget.php:139
@@ -7643,13 +7643,13 @@ msgstr ""
 
 #: bp-core/deprecated/buddypress/1.5.php:376
 msgid ""
-"%1$s mentioned you in the group \"%2$s\":\n"
-"\n"
-"\"%3$s\"\n"
-"\n"
-"To view and respond to the message, log in and visit: %4$s\n"
-"\n"
-"---------------------\n"
+"%1$s mentioned you in the group \"%2$s\":\r\n"
+"\r\n"
+"\"%3$s\"\r\n"
+"\r\n"
+"To view and respond to the message, log in and visit: %4$s\r\n"
+"\r\n"
+"---------------------\r\n"
 msgstr ""
 
 #: bp-core/deprecated/buddypress/1.6.php:154
@@ -8185,7 +8185,7 @@ msgstr ""
 #: bp-groups/classes/class-bp-groups-component.php:426
 #: bp-groups/classes/class-bp-groups-component.php:903
 #: bp-members/classes/class-bp-rest-members-details-endpoint.php:766
-#: bp-xprofile/bp-xprofile-functions.php:2119
+#: bp-xprofile/bp-xprofile-functions.php:2124
 #: bp-xprofile/classes/class-bp-xprofile-component.php:299
 #: bp-xprofile/classes/class-bp-xprofile-component.php:411
 #: bp-xprofile/classes/class-bp-xprofile-profile-completion-widget.php:142
@@ -22732,11 +22732,11 @@ msgstr ""
 msgid "View activity."
 msgstr ""
 
-#: bp-templates/bp-nouveau/includes/activity/ajax.php:685
+#: bp-templates/bp-nouveau/includes/activity/ajax.php:687
 msgid "There was a problem marking this activity as spam. Please try again."
 msgstr ""
 
-#: bp-templates/bp-nouveau/includes/activity/ajax.php:734
+#: bp-templates/bp-nouveau/includes/activity/ajax.php:736
 msgid "This activity has been marked as spam and is no longer visible."
 msgstr ""
 
@@ -22894,11 +22894,14 @@ msgid ""
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/customizer.php:48
-msgid "Profile Header"
+msgid "Profile Action Buttons"
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/customizer.php:51
-msgid "Customize the user profile header."
+#: bp-templates/bp-nouveau/includes/customizer.php:243
+msgid ""
+"Customize the order of the action buttons in profile headers, visible when "
+"viewing other member's profiles."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/customizer.php:213
@@ -22921,10 +22924,6 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/customizer.php:235
 msgid "Hide the primary navigation for a member."
-msgstr ""
-
-#: bp-templates/bp-nouveau/includes/customizer.php:243
-msgid "Reorder the profile header buttons."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/document/ajax.php:140
